added login boxes, updated landing page layout

--- a/app/login-form/login-form.less
+++ b/app/login-form/login-form.less
@@ -15,6 +15,14 @@
   padding: 0px;
 }
 
+.login-label {
+ // width: 95px;
+}
+
+.login-control {
+  width: 203px;
+}
+
 #googleButton {
   display: inline-block;
   background: #dd4b39;
