button sizes to emphasize importance

--- a/app/landing/landing.less
+++ b/app/landing/landing.less
@@ -1,8 +1,28 @@
-.panel-landing-controls {
+.panel-landing-controls-large {
   text-align: center;
   > button {
     width: 180px;
     height: 80px;
+    white-space: normal;
+    background: @button-background-gradient;
+  }
+}
+
+.panel-landing-controls-medium {
+  text-align: center;
+  > button {
+    width: 120px;
+    height: 60px;
+    white-space: normal;
+    background: @button-background-gradient;
+  }
+}
+
+.panel-landing-controls-small {
+  text-align: center;
+  > button {
+    width: 100px;
+    height: 60px;
     white-space: normal;
     background: @button-background-gradient;
   }
