playing around with d3 charts

--- a/app.less
+++ b/app.less
@@ -10,6 +10,7 @@
 @import "app/about/about.less";
 @import "app/weather/weather.less";
 @import "app/operator-control/receptor-state/receptor-state.less";
+@import "app/sensor-graph/sensor-graph.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
