--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -1,4 +1,6 @@
-div { font: 12px Arial;}
+div {
+  font: 12px Arial;
+}
 
 path {
   stroke: steelblue;
@@ -6,10 +8,37 @@ path {
   fill: none;
 }
 
-.axis path,
 .axis line {
   fill: none;
-  stroke: grey;
+  stroke: lightgrey;
   stroke-width: 1;
   shape-rendering: crispEdges;
+}
+
+.axis {
+  > .domain {
+    fill: none;
+    stroke: black;
+    stroke-width: 0;
+    shape-rendering: crispEdges;
+  }
+}
+
+.gridrect {
+  stroke: black;
+  fill: none;
+  stroke-width: 1;
+}
+
+div.tooltip {
+  position: absolute;
+  text-align: center;
+  width: 60px;
+  height: 28px;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: lightsteelblue;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
 }
