restructured app for best practices

--- a/app.less
+++ b/app.less
@@ -4,13 +4,13 @@
 @fa-font-path: "bower_components/font-awesome/fonts";
 
 /* Component LESS */
-@import "app/login-form/login-form.less";
-@import "app/landing/landing.less";
-@import "app/operator-control/operator-control.less";
-@import "app/about/about.less";
-@import "app/weather/weather.less";
-@import "app/operator-control/receptor-state/receptor-state.less";
-@import "app/sensor-graph/sensor-graph.less";
+@import "login-form/login-form.less";
+@import "landing/landing.less";
+@import "operator-control/operator-control.less";
+@import "about/about.less";
+@import "weather/weather.less";
+@import "operator-control/receptor-state/receptor-state.less";
+@import "sensor-graph/sensor-graph.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
