--- a/app.less
+++ b/app.less
@@ -12,12 +12,16 @@
 @import "operator-control/receptor-state/receptor-state.less";
 @import "sensor-graph/sensor-graph.less";
 @import "admin/admin.less";
+@import "alarms/alarms.less";
 /* Add Component LESS Above */
 
 @button-background-gradient: linear-gradient(to bottom, #79a3c9 0%, #4772a0 100%);
 @receptor-state-border-color: darkgrey;
 @receptor-state-default-background-gradient: linear-gradient(to bottom, #9dd53a 0%,#7cbc0a 100%);
 @receptor-state-inhibited-background-gradient: linear-gradient(to bottom, #ffc578 0%,#fb9d23 100%);
+
+@body-gradient-start: #FAFAFA;
+@body-gradient-end: #D9D9D9;
 
 @font-face {
   font-family: 'Glyphicons Halflings';
@@ -44,6 +48,22 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+body {
+  background: transparent;
+}
+
+html {
+  background-image: -webkit-radial-gradient(center top, ellipse farthest-corner, @body-gradient-start 0%, @body-gradient-end 100%);
+  background-image: radial-gradient(ellipse farthest-corner at center top, @body-gradient-start 0%, @body-gradient-end 100%);
+  height: 100%;
+
+  .panel {
+    background-color: transparent;
+    background-image: -webkit-radial-gradient(center top, ellipse farthest-corner, @body-gradient-start 0%, @body-gradient-end 100%);
+    background-image: radial-gradient(ellipse farthest-corner at center top, @body-gradient-start 0%, @body-gradient-end 100%);
+  }
 }
 
 //.ng-hide-add, .ng-hide-remove {
