--- a/app.less
+++ b/app.less
@@ -20,8 +20,13 @@
 @receptor-state-default-background-gradient: linear-gradient(to bottom, #9dd53a 0%,#7cbc0a 100%);
 @receptor-state-inhibited-background-gradient: linear-gradient(to bottom, #ffc578 0%,#fb9d23 100%);
 
+//@darker-dark-grey: darken(darkgrey, 7.5%);
+
 @body-gradient-start: #FAFAFA;
 @body-gradient-end: #D9D9D9;
+@navbar-default-bg: transparent;
+@navbar-background-image: linear-gradient(to bottom, #377CA8 0%, #327299 100%);
+@navbar-default-border: #7A7A7A;
 
 @font-face {
   font-family: 'Glyphicons Halflings';
@@ -43,6 +48,14 @@
   left: 50%;
 }
 
+.navbar {
+  background-image: @navbar-background-image;
+  top: 0px;
+  margin: 0;
+  border: 0px solid black;
+  margin-top: -2px;
+}
+
 .unselectable {
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -52,12 +65,16 @@
 
 body {
   background: transparent;
+
+  .panel {
+    margin-top: 5px;
+  }
 }
 
 html {
   background-image: -webkit-radial-gradient(center top, ellipse farthest-corner, @body-gradient-start 0%, @body-gradient-end 100%);
   background-image: radial-gradient(ellipse farthest-corner at center top, @body-gradient-start 0%, @body-gradient-end 100%);
-  height: 100%;
+  min-height:100%;
 
   .panel {
     background-color: transparent;
