added a dashboard framework for the landing page

--- a/alarms/alarms.less
+++ b/alarms/alarms.less
@@ -72,6 +72,7 @@
   margin-top: 2px;
   border: none;
   border-radius: 10px;
+  pointer-events: auto;
 }
 
 .alarm-item.ng-enter, .alarm-item.ng-leave {
