--- a/alarms/alarms.less
+++ b/alarms/alarms.less
@@ -16,6 +16,7 @@
   opacity: 0.8;
   transform: translateZ(0);
   -webkit-transform: translateZ(0);
+  z-index: 1000;
 
   .datestamp {
     top: 5px;
@@ -161,6 +162,11 @@ button.alarm-close {
 ul {
   float: right;
   list-style: none;
+}
+
+.alarmsGridStyle {
+  border: 1px solid rgb(212,212,212);
+  height: 600px;
 }
 
 
