--- a/app.less
+++ b/app.less
@@ -1,6 +1,7 @@
 @import "bower_components/bootstrap/less/bootstrap.less";
 //@import "bower_components/bootstrap/less/theme.less";
 @import "bower_components/font-awesome/less/font-awesome.less";
+
 @fa-font-path: "bower_components/font-awesome/fonts";
 
 /* Component LESS */
@@ -14,12 +15,13 @@
 @import "admin/admin.less";
 @import "alarms/alarms.less";
 @import "widgets/navigation/navigation-widget.less";
+@import "scheduler/scheduler.less";
 /* Add Component LESS Above */
 
 @button-background-gradient: linear-gradient(to bottom, #79a3c9 0%, #4772a0 100%);
 @receptor-state-border-color: darkgrey;
-@receptor-state-default-background-gradient: linear-gradient(to bottom, #9dd53a 0%,#7cbc0a 100%);
-@receptor-state-inhibited-background-gradient: linear-gradient(to bottom, #ffc578 0%,#fb9d23 100%);
+@receptor-state-default-background-gradient: linear-gradient(to bottom, #9dd53a 0%, #7cbc0a 100%);
+@receptor-state-inhibited-background-gradient: linear-gradient(to bottom, #ffc578 0%, #fb9d23 100%);
 
 //@darker-dark-grey: darken(darkgrey, 7.5%);
 
@@ -42,7 +44,9 @@
 }
 
 /* Required for Angular UI Bootstrap */
-.nav, .pagination, .carousel a { cursor: pointer; }
+.nav, .pagination, .carousel a {
+  cursor: pointer;
+}
 
 .nav-username-center {
   text-align: center;
@@ -51,22 +55,90 @@
 
 .navbar-collapse-button {
   position: absolute;
-  top: 5px;
-  left: 5px;
+  top: -5px;
+  left: 2px;
   color: lightgrey;
+  cursor: pointer;
+  border: 0;
+  background: none;
+
+  i {
+    font-size: 16px;
+  }
 }
 
+.navbar-collapse-button:focus {
+  outline: none;
+}
+
+.navbar-actions-button {
+  //  position: absolute;
+  //  top: 25px;
+  margin-left: -13px;
+  margin-top: 25px;
+  color: lightgrey;
+  cursor: pointer;
+  border: 0;
+  background: none;
+
+  i {
+    font-size: 16px;
+  }
+}
+
+.actions-container {
+  position: fixed;
+  top: 47px;
+  left: 0px;
+}
+
+.navbar-alarms-warning-icon {
+  color: lightgrey;
+  border: 0;
+  background: none;
+  margin-right: 10px;
+  margin-top: 12px;
+
+  i {
+    font-size: 24px;
+  }
+}
+
+.alarm-badge {
+  position: absolute;
+  top: 10px;
+  right: 2px;
+  background-color: orangered;
+}
+
+.navbar-alarms-warning-icon:hover {
+  color: darkgray;
+}
+
+.navbar-alarms-warning-icon:focus {
+  outline: none;
+}
+
+.navbar-anchor {
+  > span {
+    color: lightgrey;
+  }
+
+  > span:hover {
+    color: darkgrey;
+  }
+}
+
+.navbar-actions-button:hover,
 .navbar-collapse-button:hover {
   color: darkgray;
 }
 
 .navbar {
-//  background-image: @navbar-background-image;
-
-  top: 0px;
-  margin: 0;
   border: 0px solid black;
-  margin-top: -2px;
+  margin-bottom: 10px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
 }
 
 .unselectable {
@@ -76,19 +148,14 @@
   user-select: none;
 }
 
-body {
-  background: transparent;
-  padding-top: 0px !important;
-
-  .panel {
-    margin-top: 5px;
-  }
+.navbar-actions-group {
+  height: 0px;
 }
 
-html {
-  background-image: -webkit-radial-gradient(center top, ellipse farthest-corner, @body-gradient-start 0%, @body-gradient-end 100%);
-  background-image: radial-gradient(ellipse farthest-corner at center top, @body-gradient-start 0%, @body-gradient-end 100%);
-  min-height:100%;
+body {
+  background: lightgrey;
+  padding-top: 0px !important;
+  height: 0px;
 
   .panel {
     background-color: transparent;
@@ -97,20 +164,19 @@ html {
   }
 }
 
-//.ng-hide-add, .ng-hide-remove {
-//  display: block !important;
-//}
+.ng-hide-add, .ng-hide-remove {
+  display: block !important;
+}
 
-//.animateHide {
-//  transition: 1s linear all;
-//  height: @navbar-height;
-//  overflow: hidden;
-//}
-//
-//.animateHide.ng-hide {
-//  height: 0px;
-//}
+.animateHide {
+  transition: 1s linear all;
+  height: @navbar-height;
+  overflow: hidden;
+}
 
+.animateHide.ng-hide {
+  height: 0px;
+}
 
 /* Personal preference for BS modal.  The LESS below makes the backdrop white and
    causes the modal to fade in rather than slide in. */
