--- a/scheduler/scheduler.less
+++ b/scheduler/scheduler.less
@@ -2,17 +2,26 @@
   background-image: radial-gradient(ellipse farthest-corner at center, @body-gradient-start 0%, @body-gradient-end 100%);
   height: 750px;
   padding: 10px;
-  position: absolute;
-  left: 0px;
-  width: 1000px;
   border-radius: 5px;
+  min-width: 600px;
+  width: 850px;
+  float: left;
+}
 
-  .ngCell {
-    overflow: visible;
+.schedule-block-details {
+  float: left;
+  margin: 0px;
+  padding: 0px;
+
+  .panel-content {
+    margin: 0px;
   }
 
-  .ngViewport {
-    overflow: visible;
+  textarea {
+    height: 340px;
+    width: 340px;
+    resize: none;
+
   }
 }
 
@@ -72,7 +81,7 @@
 }
 
 .gridStyle {
-  border: 1px solid rgb(212,212,212);
+  border: 1px solid rgb(212, 212, 212);
   height: 300px;
 }
 
@@ -94,7 +103,7 @@
   border-radius: 4px;
   background-color: white;
   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.75);
-  box-shadow:         3px 3px 5px 0px rgba(50, 50, 50, 0.75);
+  box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.75);
 }
 
 .btn-custom-datetimepicker {
@@ -104,6 +113,7 @@
   padding: 4px 10px;
   width: 99%;
   text-align: left;
+  border-color: #A6A6A6;
 
   .glyphicon {
     position: absolute;
