--- a/operator-control/operator-control.less
+++ b/operator-control/operator-control.less
@@ -1,9 +1,8 @@
 .panel-operator-controls {
-  text-align: center;
   > button {
     width: 180px;
-    height: 80px;
-    white-space: normal;
-    background: @button-background-gradient;
   }
+//  margin-left: auto;
+//  margin-right: auto;
+//  width: 500px;
 }
