--- a/app.less
+++ b/app.less
@@ -23,7 +23,6 @@
 @receptor-state-default-background-gradient: linear-gradient(to bottom, #9dd53a 0%, #7cbc0a 100%);
 @receptor-state-inhibited-background-gradient: linear-gradient(to bottom, #ffc578 0%, #fb9d23 100%);
 
-
 @body-gradient-start: #cacaca;
 @body-gradient-end: #9a9a9a;
 @panel-gradient-start: #FAFAFA;
@@ -32,6 +31,7 @@
 @btn-primary-color: #f0f0f0;
 @btn-primary-bg: #4a7fb0;
 @btn-primary-border: darken(@btn-primary-bg, 5%);
+@navbar-height: 50px;
 
 @app-min-width: 770px;
 
@@ -96,15 +96,28 @@
   left: 0px;
 }
 
+.alarms-warning-container {
+  border-left: 1px solid lighten(darkgray, 20%);
+}
+
 .navbar-alarms-warning-icon {
   color: gray;
   border: 0;
   background: none;
   margin-right: 10px;
-  margin-top: 12px;
+  margin-left: 10px;
+//  margin-top: 12px;
 
   i {
     font-size: 24px;
+  }
+
+  &:hover {
+    color: darkgray;
+  }
+
+  &:focus {
+    outline: none;
   }
 }
 
@@ -115,20 +128,11 @@
   background-color: orangered;
 }
 
-.navbar-alarms-warning-icon:hover {
-  color: darkgray;
-}
-
-.navbar-alarms-warning-icon:focus {
-  outline: none;
-}
-
 .navbar-anchor {
-  > span {
-    color: grey;
-  }
+  border-left: 1px solid lighten(darkgray, 20%);
+  color: grey;
 
-  > span:hover {
+  &:hover {
     color: darkgray;
   }
 }
@@ -165,19 +169,19 @@ body {
   }
 }
 
-.ng-hide-add, .ng-hide-remove {
-  display: block !important;
-}
-
-.animateHide {
-  transition: 1s linear all;
-  height: @navbar-height;
-  overflow: hidden;
-}
-
-.animateHide.ng-hide {
-  height: 0px;
-}
+//.ng-hide-add, .ng-hide-remove {
+//  display: block !important;
+//}
+//
+//.animateHide {
+//  transition: 1s linear all;
+//  height: @navbar-height;
+//  overflow: hidden;
+//}
+//
+//.animateHide.ng-hide {
+//  height: 0px;
+//}
 
 .view-container {
   width: 90%;
@@ -187,7 +191,7 @@ body {
 }
 
 .btn-navbar-fill {
-  height: 55px;
+  height: 50px;
   border: 1px solid lighten(darkgray, 20%);
   background: lighten(darkgray, 25%);
   border-radius: 0px;
@@ -195,4 +199,8 @@ body {
   &:hover {
     background: lighten(darkgray, 20%);
   }
+}
+
+.operator-control-btn-contrainer {
+  margin-left: 15px;
 }
