--- a/scheduler/scheduler.less
+++ b/scheduler/scheduler.less
@@ -1,21 +1,9 @@
-.scheduler-container {
-  background-image: radial-gradient(ellipse farthest-corner at center, @body-gradient-start 0%, @body-gradient-end 100%);
-  height: 750px;
-  padding: 10px;
-  border-radius: 5px;
-  min-width: 600px;
-  width: 850px;
+.schedules-panel-heading-controls {
   float: left;
+  margin-top: -40px;
 }
 
 .schedule-block-details {
-  float: left;
-  margin: 0px;
-  padding: 0px;
-
-  .panel-content {
-    margin: 0px;
-  }
 
   textarea {
     height: 340px;
