scheduler datepicker display location fix

--- a/scheduler/scheduler.less
+++ b/scheduler/scheduler.less
@@ -85,7 +85,7 @@
 }
 
 .datepickerMenu {
-  position: absolute;
+  position: fixed;
   z-index: 1000;
   border: 1px solid darkgrey;
   border-radius: 4px;
