--- a/app.less
+++ b/app.less
@@ -34,7 +34,7 @@
 @btn-primary-border: darken(@btn-primary-bg, 5%);
 @navbar-height: 50px;
 @navbar-default-bg: rgba(255, 255, 255, 1.0);
-
+@navbar-btn-bg: rgba(220, 235, 255, 0.5);
 @navbar-text-hover-color: darken(grey, 25%);
 
 @app-min-width: 770px;
@@ -221,16 +221,14 @@ body {
   margin-right: auto;
 }
 
-@btn-navbar-bg: rgba(220, 235, 255, 0.51);
-
 .btn-navbar-fill {
   height: 50px;
   border: 1px solid lighten(#d3d3d3, 5%);
-  background: @btn-navbar-bg;
+  background: @navbar-btn-bg;
   border-radius: 0px;
 
   &:hover {
-    background: darken(@btn-navbar-bg, 10%);
+    background: darken(@navbar-btn-bg, 10%);
     border: 1px solid #d3d3d3;
   }
 }
