refactored gantt chart to be a reusable widget

--- a/app.less
+++ b/app.less
@@ -17,6 +17,7 @@
 @import "widgets/navigation/navigation-widget.less";
 @import "scheduler/scheduler.less";
 @import "util/gantt/gantt.less";
+@import "widgets/gantt/gantt-widget.less";
 /* Add Component LESS Above */
 
 @button-background-gradient: linear-gradient(to bottom, #79a3c9 0%, #4772a0 100%);
