reworked project structure to allow for easier and better unit testing

--- a/app/app.less
+++ b/app/app.less
@@ -1,23 +1,23 @@
-@import "bower_components/bootstrap/less/bootstrap.less";
+@import "../bower_components/bootstrap/less/bootstrap";
 //@import "bower_components/bootstrap/less/theme.less";
-@import "bower_components/font-awesome/less/font-awesome.less";
+@import "../bower_components/font-awesome/less/font-awesome";
 
 @fa-font-path: "bower_components/font-awesome/fonts";
 
 /* Component LESS */
-@import "login-form/login-form.less";
-@import "landing/landing.less";
-@import "operator-control/operator-control.less";
-@import "about/about.less";
-@import "weather/weather.less";
-@import "operator-control/receptor-state/receptor-state.less";
-@import "sensor-graph/sensor-graph.less";
-@import "admin/admin.less";
-@import "alarms/alarms.less";
-@import "widgets/navigation/navigation-widget.less";
-@import "scheduler/scheduler.less";
-@import "util/gantt/gantt.less";
-@import "widgets/gantt/gantt-widget.less";
+@import "login-form/login-form";
+@import "landing/landing";
+@import "operator-control/operator-control";
+@import "about/about";
+@import "weather/weather";
+@import "operator-control/receptor-state/receptor-state";
+@import "sensor-graph/sensor-graph";
+@import "admin/admin";
+@import "alarms/alarms";
+@import "widgets/navigation/navigation-widget";
+@import "scheduler/scheduler";
+@import "util/gantt/gantt";
+@import "widgets/gantt/gantt-widget";
 /* Add Component LESS Above */
 
 @button-background-gradient: linear-gradient(to bottom, #79a3c9 0%, #4772a0 100%);
@@ -42,8 +42,8 @@
 
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('bower_components/bootstrap/fonts/glyphicons-halflings-regular.eot');
-  src: url('bower_components/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('bower_components/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('bower_components/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('bower_components/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+  src: url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.eot');
+  src: url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
 
 /* Required for Angular UI Bootstrap */
