--- a/app/login-form/login-form.less
+++ b/app/login-form/login-form.less
@@ -41,7 +41,7 @@ span.label {
   font-weight: bold;
 }
 span.icon {
-  background: url('/images/branding/g+32.png') transparent 5px 50% no-repeat;
+  background: url('/app/images/branding/g+32.png') transparent 5px 50% no-repeat;
   display: inline-block;
   vertical-align: middle;
   width: 35px;
