fixed up build step for distribution

--- a/app/app.less
+++ b/app/app.less
@@ -2,7 +2,7 @@
 //@import "bower_components/bootstrap/less/theme.less";
 @import "../bower_components/font-awesome/less/font-awesome";
 
-@fa-font-path: "bower_components/font-awesome/fonts";
+//@fa-font-path: "bower_components/font-awesome/fonts";
 
 /* Component LESS */
 @import "login-form/login-form";
@@ -38,12 +38,6 @@
 @navbar-text-hover-color: darken(grey, 25%);
 
 @app-min-width: 770px;
-
-@font-face {
-  font-family: 'Glyphicons Halflings';
-  src: url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.eot');
-  src: url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
-}
 
 /* Required for Angular UI Bootstrap */
 .nav, .pagination, .carousel a {
@@ -114,7 +108,7 @@
   //  margin-top: 12px;
 
   i {
-    font-size: 24px;
+    font-size: 29px;
   }
 
   &:hover {
