--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -20,10 +20,6 @@
     .btn;
     .btn-default;
   }
-
-  span {
-    .glyphicon;
-  }
 }
 
 .panel-content {
@@ -62,10 +58,6 @@
       outline: none;
     }
   }
-
-  span {
-    .glyphicon;
-  }
 }
 
 .gridStyle {
@@ -103,7 +95,7 @@
   text-align: left;
   border-color: #A6A6A6;
 
-  .glyphicon {
+  .fa {
     position: absolute;
     float: right;
     right: 9px;
