override glyphicon use in datetimepicker to use fontawesome angle left+right icons

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -84,6 +84,20 @@
   background-color: white;
   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.75);
   box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.75);
+
+
+}
+
+.glyphicon {
+  .fa();
+}
+
+.glyphicon-arrow-left:before {
+  content: @fa-var-angle-left;
+}
+
+.glyphicon-arrow-right:before {
+  content: @fa-var-angle-right;
 }
 
 .btn-custom-datetimepicker {
