--- a/app/app.less
+++ b/app/app.less
@@ -2,7 +2,7 @@
 //@import "bower_components/bootstrap/less/theme.less";
 @import "../bower_components/font-awesome/less/font-awesome";
 
-//@fa-font-path: "bower_components/font-awesome/fonts";
+@fa-font-path: "bower_components/font-awesome/fonts";
 
 /* Component LESS */
 @import "login-form/login-form";
