--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -89,7 +89,13 @@
 }
 
 .glyphicon {
-  .fa();
+  display: inline-block;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .glyphicon-arrow-left:before {
