repositioned delete dashboard config button to the right

--- a/app/landing/landing.less
+++ b/app/landing/landing.less
@@ -29,5 +29,8 @@
 }
 
 .btn-delete-dashboard-pref {
-  float: left;
+  float: right;
+  margin-left: 5px;
+  margin-right: -5px;
+  margin-top: -2px;
 }
