initial commit for d3 treemap and health and status partials

--- a/app/app.less
+++ b/app/app.less
@@ -15,6 +15,7 @@
 @import "widgets/navigation/navigation-widget";
 @import "scheduler/scheduler";
 @import "widgets/gantt/gantt-widget";
+@import "health/health";
 /* Add Component LESS Above */
 
 @button-background-gradient: linear-gradient(to bottom, #79a3c9 0%, #4772a0 100%);
