zoomable treemap view for health and state view

--- a/app/app.less
+++ b/app/app.less
@@ -16,6 +16,7 @@
 @import "scheduler/scheduler";
 @import "widgets/gantt/gantt-widget";
 @import "health/health";
+@import "d3/d3";
 /* Add Component LESS Above */
 
 @button-background-gradient: linear-gradient(to bottom, #79a3c9 0%, #4772a0 100%);
