handling resize and redraw for health treemap

--- a/app/app.less
+++ b/app/app.less
@@ -215,6 +215,14 @@ body {
   margin-right: auto;
 }
 
+.view-container-full {
+  width: 99%;
+  height: 100%;
+  margin-left: 3px;
+  margin-right: 3px;
+  margin-bottom: 3px;
+}
+
 .btn-navbar-fill {
   height: 50px;
   border: 1px solid lighten(#d3d3d3, 5%);
