--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -22,16 +22,16 @@ rect.parent,
 }
 
 .grandparent rect {
-  fill: orange;
+  fill: #8dc1ed;
 }
 
 .grandparent:hover rect {
-  fill: #ee9700;
+  fill: #72a1ca;
 }
 
 .no-children rect.parent {
   fill: green;
-  fill-opacity: .4;
+  fill-opacity: .35;
 }
 
 .children rect.parent,
@@ -41,7 +41,7 @@ rect.parent,
 
 .children rect.parent {
   fill: green;
-  fill-opacity: .8;
+  fill-opacity: .5;
 }
 
 .children:hover rect.child {
