--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -48,3 +48,11 @@ rect.parent,
   fill: green;
 }
 
+.treemap-tooltip {
+  position: absolute;
+  border:1px solid;
+  margin:10px;
+  padding: 6px;
+  opacity: 0.9;
+  z-index: 1000px;
+}
