navbar still adjustment

--- a/app/app.less
+++ b/app/app.less
@@ -161,6 +161,7 @@
 
 .navbar {
   margin-bottom: 10px;
+  border-top: none;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
   border-bottom-color: darken(@navbar-default-bg, 25%);
@@ -185,6 +186,7 @@ body {
   background: url('images/bg-body.png') repeat left top #f2f2f2;
   padding-top: 0px !important;
   height: 0px;
+
   min-width: @app-min-width;
 
   .panel {
