added a bunch of tree views for health display

--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -89,3 +89,22 @@ circle.parent:hover {
 circle.child {
   pointer-events: none;
 }
+
+rect.part {
+  stroke: #eee;
+  fill: #aaa;
+  fill-opacity: .8;
+}
+
+rect.part-parent {
+  cursor: pointer;
+  fill: green;
+  opacity: .5;
+}
+
+path {
+  stroke: #000;
+  stroke-width: 1.5;
+  cursor: pointer;
+  opacity: 0.5;
+}
