added angular material - redid login screen, added commented code for a wind rose

--- a/app/app.less
+++ b/app/app.less
@@ -184,8 +184,9 @@
 
 body {
   background: url('images/bg-body.png') repeat left top #f2f2f2;
-  padding-top: 0px !important;
-  height: 0px;
+//  padding-top: 0px !important;
+//  height: 0px;
+  font-family: RobotoDraft;
 
   min-width: @app-min-width;
 
