--- a/app/app.less
+++ b/app/app.less
@@ -35,7 +35,7 @@
 @navbar-height: 50px;
 @navbar-default-bg: rgba(255, 255, 255, 1.0);
 @navbar-btn-bg: rgba(150, 190, 255, 0.50);
-@navbar-text-hover-color: darken(grey, 25%);
+@navbar-text-hover-color: lightgrey;
 
 @app-min-width: 770px;
 
@@ -49,14 +49,17 @@
   vertical-align: center;
 }
 
-.navbar-collapse-button {
-  position: absolute;
-  top: -5px;
-  left: 2px;
-  color: gray;
+.toolbar-collapse-button {
+  position: fixed;
+  top: 0px;
+  left: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
   cursor: pointer;
   border: 0;
   background: none;
+  z-index: 1000;
 
   i {
     font-size: 16px;
@@ -69,6 +72,10 @@
   &:focus {
     outline: none;
   }
+}
+
+.toolbar-collapse-button-grey {
+  color: lightgrey;
 }
 
 .navbar-actions-button {
@@ -95,16 +102,13 @@
   z-index: 1000;
 }
 
-.alarms-warning-container {
-  border-left: 1px solid darken(@navbar-default-bg, 10%);
-}
-
-.navbar-alarms-warning-icon {
-  color: gray;
+.button-toolbar-flat-icon {
   border: 0;
+  color: white;
   background: none;
-  margin-right: 10px;
-  margin-left: 10px;
+  padding-left: 20px;
+  padding-right: 0px;
+  height: 55px;
   //  margin-top: 12px;
 
   i {
@@ -226,18 +230,50 @@ body {
   margin-bottom: 3px;
 }
 
-.btn-navbar-fill {
+.btn-toolbar {
   height: 50px;
-  border: 1px solid darken(@navbar-btn-bg, 5%);
-  background: @navbar-btn-bg;
-  border-radius: 0px;
-
-  &:hover {
-    background: darken(@navbar-btn-bg, 10%);
-    border: 1px solid darken(@navbar-btn-bg, 15%);
-  }
+  color: black;
 }
 
 .operator-control-btn-container {
-  margin-left: 15px;
+//  margin-left: 35px;
+}
+
+.menu-item {
+  background-color: #fff;
+  border-width: 0;
+  cursor: pointer;
+  display: block;
+  color: #333;
+  font-size: inherit;
+  line-height: 40px;
+  max-height: 40px;
+  margin: 0;
+  outline: 0;
+  padding: 0 28px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  width: 100%;
+  z-index: 1;
+  -webkit-transition: .2s linear;
+  -webkit-transition-property: max-height,background-color;
+  -moz-transition: .2s linear;
+  -moz-transition-property: max-height,background-color;
+  transition: .2s linear;
+  transition-property: max-height,background-color;
+
+  &:hover {
+    color: #999;
+  }
+}
+
+material-sidenav {
+  transition: none !important;
+
+  .menu-item.active {
+    background-color: #eee;
+    font-weight: 700;
+    color: #4285f4;
+  }
 }
