changed some buttons to use material design

--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -218,6 +218,16 @@ ul {
   height: 600px;
 }
 
+.alarms-buttons {
+
+  material-button {
+    width: 10em;
+    margin-right: 10px;
+  }
+
+}
+
+
 
 
 
