--- a/app/app.less
+++ b/app/app.less
@@ -45,7 +45,7 @@
 }
 
 .toolbar-collapse-button {
-  position: fixed;
+  position: absolute;
   top: 0px;
   left: 50%;
   margin-left: auto;
@@ -126,14 +126,15 @@
 }
 
 body {
-  background: url('images/bg-body.png') repeat left top #f2f2f2;
+  background: #fff;
   font-family: RobotoDraft;
   min-width: @app-min-width;
 }
 
 .view-container {
-  width: 90%;
+  width: 95%;
   height: 100%;
+  margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -177,10 +178,18 @@ body {
 
 material-sidenav {
   transition: none !important;
+  height: 100%;
 
   .menu-item.active {
     background-color: #eee;
     font-weight: 700;
     color: #4285f4;
   }
+}
+
+.panel-toolbar-turquoise {
+  background: #00BCD4;
+  color: #fff;
+  z-index: 1;
+  font-size: 1.5em;
 }
