--- a/app/widgets/navigation/navigation-widget.less
+++ b/app/widgets/navigation/navigation-widget.less
@@ -1,8 +1,10 @@
-.navigationButtonGroup {
+.navigation-buttons {
 
-  button {
-    width: 150px;
-    margin: 4px;
+  material-button {
+    width: 12em;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 
 }
