update panel styling, updated receptor state templates

--- a/app/app.less
+++ b/app/app.less
@@ -188,7 +188,7 @@ material-sidenav {
 }
 
 .panel-toolbar-turquoise {
-  background: #00BCD4;
+  background: #283593;
   color: #fff;
   z-index: 1;
   font-size: 1.5em;
