--- a/app/landing/landing.less
+++ b/app/landing/landing.less
@@ -32,5 +32,35 @@
   float: right;
   margin-left: 5px;
   margin-right: -5px;
-  margin-top: -2px;
+  margin-top: -3px;
+  color: grey;
+  cursor: pointer;
+
+  &:hover {
+    color: darkgrey;
+  }
+}
+
+.dashboard-container {
+
+  .panel-heading {
+    background-color: #303f9f;
+    color: white;
+
+    span {
+      i.fa {
+        color: white;
+      }
+    }
+  }
+
+  span {
+      i.fa {
+        color: grey;
+
+        &:hover {
+          color: darkgrey;
+        }
+      }
+  }
 }
