--- a/app/operator-control/receptor-state/receptor-state.less
+++ b/app/operator-control/receptor-state/receptor-state.less
@@ -1,16 +1,17 @@
 .inhibited {
-  background: @receptor-state-inhibited-background-gradient;
-  border: 1px solid @receptor-state-border-color;
+  background: #ffc107;
+  color: black;
   width: 100%;
-  padding: 2px;
 }
 
 .receptor-state-div {
+  margin: 5px;
   text-align: center;
   position: relative;
   display: inline-block;
-  background: @receptor-state-default-background-gradient;
-  width: 90px;
+  background: #259b24;
+  width: 120px;
   height: 90px;
-  border: 1px solid @receptor-state-border-color;
+  color: white;
+  border: 1px solid lightgrey;
 }
