updated operator control screen

--- a/app/operator-control/operator-control.less
+++ b/app/operator-control/operator-control.less
@@ -4,3 +4,28 @@
     margin-right: 10px;
   }
 }
+
+.inhibited {
+  background: #ffc107;
+  color: black;
+  width: 100%;
+  padding: 2px;
+}
+
+.receptor-state-div {
+  text-align: center;
+  position: relative;
+  display: inline-block;
+  background: #259b24;
+  color: white;
+  width: 10%;
+  top: 0;
+  min-height: 90px;
+  margin: 3px;
+}
+
+.receptor-state-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
